<?xml version="1.0"?>
<package format="2">
    <name>hdt_control_msgs</name>
    <version>0.0.0</version>
    <description>The hdt_control_msgs package</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <exec_depend>message_runtime</exec_depend>

    <depend>actionlib_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
</package>
