<?xml version="1.0"?>
<package format="2">
    <name>hdt_control_rviz_plugins</name>
    <description>The hdt_control_rviz_plugins package</description>
    <version>0.0.0</version>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>eigen_conversions</depend>
    <depend>hdt_control_msgs</depend>
    <depend>hdt_kinematics</depend>
    <depend>libqt4-dev</depend>
    <depend>rcta_manipulation_command</depend>
    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>smpl</depend>
    <depend>spellbook</depend>
    <depend>tf</depend>

    <export>
        <rviz plugin="${prefix}/plugins/controller_status_panel_plugin_description.xml"/>
        <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
        <rviz plugin="${prefix}/plugins/temperature_status_plugin_description.xml"/>
        <rviz plugin="${prefix}/plugins/viservo_command_panel_plugin_description.xml"/>
    </export>
</package>
