<?xml version="1.0"?>
<package format="2">
    <name>hdt_manipulation</name>
    <version>0.0.0</version>
    <description>The hdt_manipulation package</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cmu_manipulation_msgs</depend>
    <depend>eigen_conversions</depend>
    <depend>grasping_executive</depend>
    <depend>hdt_control_msgs</depend>
    <depend>leatherman</depend>
    <depend>roscpp</depend>
    <depend>smpl</depend>
    <depend>tf</depend>
    <depend>hdt_kinematics</depend>
    <depend>spellbook_ros</depend>

    <exec_depend>gascan_grasp_planning</exec_depend>
</package>
