<?xml version="1.0"?>
<package format="2">
    <name>hdt_moveit_config</name>
    <version>0.0.0</version>
    <description>The hdt_moveit_config package</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
