<?xml version="1.0"?>
<package format="2">
    <name>manipulation_executive</name>
    <version>0.0.0</version>
    <description>The manipulation_executive package</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>actionlib</depend>
    <depend>cmu_manipulation_msgs</depend>
    <depend>roscpp</depend>
</package>
